<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/event_title"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:singleLine="true"/>

        <TextView
                android:id="@+id/event_date"
                android:hint="@string/date"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingVertical="8dp"
                android:layout_marginStart="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/event_time"
                android:hint="@string/time"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingVertical="8dp"
                android:layout_marginStart="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/event_note"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/cancel_info_button"
                    android:text="@string/cancel"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            <Button
                    android:id="@+id/edit_info_button"
                    android:text="@string/edit"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            <Button
                    android:id="@+id/cancel_edit_button"
                    android:text="@string/cancel"
                    android:visibility="gone"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            <Button
                    android:id="@+id/done_edit_button"
                    android:text="@string/done"
                    android:visibility="gone"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

        </LinearLayout>

        <Button
                android:id="@+id/delete_button"
                android:layout_gravity="center"
                android:text="@string/delete"
                android:visibility="gone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>