<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/title_text"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/date_input"
                android:hint="@string/date"
                android:textSize="18sp"
                android:textColor="#000000"
                android:paddingVertical="8dp"
                android:layout_marginStart="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/time_input"
                android:hint="@string/time"
                android:textSize="18sp"
                android:textColor="#000000"
                android:paddingVertical="8dp"
                android:layout_marginStart="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/note_text"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/cancel_button"
                    android:text="@string/cancel"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            <Button
                    android:id="@+id/done_button"
                    android:text="@string/done"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>