<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="#ffffff">

    <LinearLayout
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/item_day"
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:contentDescription="@string/day"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/item_year"
                android:text="@string/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:contentDescription="@string/year"
                android:gravity="center_horizontal"
                android:textStyle="bold"/>

    </LinearLayout>

    <TextView
            android:id="@+id/item_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:text="@string/event"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:singleLine="true"/>

</LinearLayout>